<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SimpleTweet</string>
    <string name="login_label">Connect to Twitter</string>
    <string name="intent_scheme">oauth</string>
    <string name="intent_host">cprest</string>
<<<<<<< HEAD
    <string name="what_s_happening">What\'s happening?</string>
    <string name="tweet">Tweet</string>
    <string name="_200">200</string>
    <string name="what_s_happening2">What\'s happening?</string>
    <string name="users_full_name">Users full name</string>
    <string name="atusername">atUsername</string>
    <string name="atusernamereply">atUsernameReply</string>
    <string name="tweet">Tweet</string>
    <string name="_0">0</string>
=======
>>>>>>> 96778e4f552e9ac9fd32ad2dcc9db51cf26b5e96

</resources>