<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ReplyActivity">


    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:id="@+id/ivExitReply"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="21dp"
        android:layout_marginTop="19dp"
        android:src="@drawable/ic_vector_close" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:id="@+id/tvFullName"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="19dp"
        android:layout_toStartOf="@+id/replyAvatar"
        android:text="@string/users_full_name" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvFullName"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="130dp"
        android:text="@string/atusername" />

    <TextView
        android:id="@+id/tvInReplyTo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="5dp"
        android:layout_marginTop="148dp"
        android:layout_toEndOf="@+id/arrow"
        android:text="In reply to variable" />

    <ImageView
        android:id="@+id/arrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="38dp"
        android:layout_marginTop="146dp"
        android:src="@drawable/ic_baseline_arrow_downward_24" />

    <ImageView
        android:layout_width="79dp"
        android:layout_height="73dp"
        android:id="@+id/replyAvatar"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="11dp"
        android:src="@drawable/ic_launcher_twitter" />

    <TextView
        android:id="@+id/tvReplyUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="48dp"
        android:layout_marginTop="184dp"
        android:text="@string/atusernamereply"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etReplyBody"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="70dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine" />

    <TextView
        android:id="@+id/tvReplyCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="688dp"
        android:layout_marginEnd="34dp"
        android:layout_toStartOf="@+id/btnReplyTweet"
        android:text="@string/_0" />

    <Button
        android:id="@+id/btnReplyTweet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="9dp"
        android:background="@android:color/holo_blue_dark"
        android:layout_marginBottom="12dp"
        android:text="@string/tweet" />


</RelativeLayout>